:lipstick: fix height on mobile

--- a/src/components/page/Frontpage/FrontpageSlider/FrontpageSlider.module.css
+++ b/src/components/page/Frontpage/FrontpageSlider/FrontpageSlider.module.css
@@ -1,7 +1,8 @@
 .Container {
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   display: flex;
+  overflow-y: hidden;
 }
 
 .CenterFlex {
